# wikipedia_api

./: .gitignore  README.rst  conftest.py  pyproject.toml
src/utils/: useful_stuff.py
src/wikipedia_api/: client.py
tests/: test_api_client.py  test_json_response_has_valid_urls.py  test_language_inputs.py
