[tool.poetry]
name = "wikipedia_api"
version = "0.1.0"
description = ""
authors = ["Stephen Bell <s0bell@protonmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
pytest = "^6.2.2"
pytest-html = "^3.1.1"
pytest-xdist = "^2.2.0"
python = "^3.7"
requests = "^2.25.1"
validators = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--html=report.html --cov . -n 2"
log_cli_level = "INFO"